--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,14 @@
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-
-# Local H2 Settings below
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.h2.console.enabled=true
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-spring.datasource.platform=h2
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.platform=postgres
+spring.datasource.removeAbandoned=true
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.DefaultNamingStrategy
+spring.datasource.hikari.data-source-properties.stringtype=unspecified
+spring.jpa.hibernate.ddl-auto=update
 
 ## MULTIPART (MultipartProperties)
 # Reference: https://www.callicoder.com/spring-boot-file-upload-download-rest-api-example/
