--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -15,7 +15,7 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 # Reference: https://www.callicoder.com/spring-boot-file-upload-download-rest-api-example/
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
-# Threshold after whapplication.propertiesch files are written to disk.
+# Threshold after which files are written to disk.
 spring.servlet.multipart.file-size-threshold=2KB
 # Max file size.
 spring.servlet.multipart.max-file-size=200MB
